MDEV-31601 Some ALTER TABLEs fail ... with a wrong error message

Report correct algorithm in the error message.